--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                         <div class="offer__text text">
                             Оставьте нам свой номер, и получите <span>бесплатный</span> рассчет специально для вас!
                         </div>
-                        <form id="myForm">
-                            <input id="phone3" class="form__element form-control" type="text">
+                        <form id="form">
+                            <input id="phone" class="form__element form-control" type="text">
                             <input value="Отправить" type="submit" class="button form__element"></input>
                         </form>
                         
@@ -92,7 +92,7 @@
                                     1
                                 </div>
                                 <div class="about__line-back"></div>
-                                <div class="about__description">
+                                <div class="about__description fadeInLeft wow" data-wow-duration="2s">
                                     Наша компания была основана в 2015 году, название ей «ЭлипсЛед». Занимаемся мы производством светильником для животноводства
                                 </div>
                                 <div class="about__line-front"></div>
@@ -100,7 +100,7 @@
                                     2
                                 </div>
                                 <div class="about__line-back"></div>
-                                <div class="about__description">
+                                <div class="about__description fadeInLeft wow" data-wow-duration="2s">
                                     Работаем мы исключительно на собственном оборудовании и только с качественным сырьем.
                                 </div>
                                 <div class="about__line-front"></div>
@@ -108,7 +108,7 @@
                                     3
                                 </div>
                                 <div class="about__line-back"></div>
-                                <div class="about__description">
+                                <div class="about__description fadeInLeft wow" data-wow-duration="2s">
                                     С помощью команды наших специалистов мы смогли добиться одного из самых высоких уровней качества  светодиодных светильников для свиноводства, КРС, выращивания грибов!
                                 </div>
                             </div>
